media/boom/css/boom/assets.css.less
@import 'main/mixins.less';
@import 'main/colors.less';
@import 'assets/manager.less';
@import 'assets/upload.less';
@import 'assets/picker.less';
@import 'assets/pagination.less';
@import 'assets/view.less';

#b-assets {
	&-all {
		background: #222;
		width: auto;

		&:hover {
			background: #555;
		}
	}

	&-buttons {
		display: inline-block;
		margin-left: 2em;
	}

	&-content {
		overflow: hidden;

		img {
			border: none;
		}
	}

	&-filters {
		padding-left: 3px;

		input, select {
			height: 24px;
			font-size: 1.2em;
			vertical-align: top;
			width: 250px;
			margin-top: 15px;
		}

		select {
			width: 150px;
			margin-top: 19px;
		}
	}

	&-view-thumbs {
		overflow: hidden;
		padding-left: 3px;

		> div {
			margin: 0.5em;
			margin-left: 0;
			display: inline-block;
			position: relative;
			overflow: hidden;
		}

		.selected .thumb {
			opacity: 0.3;
		}

		.thumb {
			width: 100%;
			height: 100%;
			max-height: 100%;
			position: relative;
			padding: 0;

			a {
				display: block;
			}

			input {
				z-index: 0;
				position: absolute;
				top: 0;
				left: 0;
			}

			img {
				position: relative;
				z-index: 1;
			}

			a, img {
				width: 100%;
				height: 100%;
				max-height: 100%;
			}

			.b-asset-details {
				max-height: 0px;
				position: absolute;
				bottom: 0;
				left: 0;
				right: 0;
				background: #222;
				opacity: 0.7;
				color: white;
				font-size: 1.1em;
				line-height: 1.4em;
				height: 100%;
				z-index: 2;
				overflow: hidden;

				-webkit-transition: all 1.5s ease-in;
				-moz-transition: all 1.5s ease-in;
				-ms-transition: all 1.5s ease-in;
				-o-transition: all 1.5s ease-in;
				transition: all 1.5s ease-in;

				h1 {
					text-align: center;
				}

				h1, p {
					padding: 5px;
				}

				img.type {
					width: 16px;
					height: 16px;
				}
			}

			&:hover, &:focus, &:active {
				.b-asset-details {
					font-weight: normal;
					max-height: 100%;

					-webkit-transition: all 1.5s ease-out;
					-moz-transition: all 1.5s ease-out;
					-ms-transition: all 1.5s ease-out;
					-o-transition: all 1.5s ease-out;
					transition: all 1.5s ease-out;
				}
			}
		}
	}

	&-filters {
		background: #7f7f7f;
		color: #ffffff;
	}

	&-stats {
		display: inline-block;
		vertical-align: top;
		float: right;
		margin-left: 1.3em;
		font-size: 1.3em;
		line-height: 64px;
	}

	/* Styling for the 'no assets found' message when the asset manager returns no assets */
	&-none {
		font-weight: bold;
		font-size: 20pt;
		text-align: center;
		margin-top: 15%;
	}

	&-upload {
		margin-right: 2em;
	}
}

#b-assets-view-thumbs .ui-state-active {
	background: #d6278e;
}

#b-topbar.b-asset-manager {
	#boom-page-user-menu {
		float: right;
	}
}

.b-assets-dialog {
	& .b-items-box-header {
		background: #000000;
	}

	#b-assets-view, #b-assets-manager {
		background: transparent;
	}

	/* Hide certain elements when the asset manager is opened in a dialog. */
	#b-topbar, .b-dialog-hidden {
		display: none;
	}

	.b-assets-preview {
		margin-top: 1px;
	}

	#b-assets {
		&-filters, &-view-thumbs {
			background: none;
			padding-left: 0;
		}
	}

	.ui-dialog-buttonpane {
		padding: 1em;
		padding-right: 2em;
		position: relative;

		button {
			position: relative;
			z-index: 1;
		}
	}

	.center {
		position: absolute;
		left: 0;
		width: 100%;
		overflow: hidden;
		text-align: center;

		#b-assets-pagination, #b-assets-stats {
			float: none;
		}
	}
}

@media screen and (max-width: 10256px) {
	#b-assets-manager #b-assets-filters {
		input {
			width: 200px;
		}
	}
}

